[MODIFY] correct some errors